// Vitest Snapshot v1

exports[`Message > Message baseVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-message
    theme="info"
  >
    用于表示普通操作信息提示
  </t-message>
  <t-message
    theme="success"
  >
    用于表示操作顺利达成
  </t-message>
  <t-message
    theme="warning"
  >
    用于表示操作引起一定后果
  </t-message>
  <t-message
    theme="error"
  >
    用于表示操作引起严重的后果
  </t-message>
  <t-message
    theme="question"
  >
    用于帮助用户操作的信息提示
  </t-message>
</t-space>
`;

exports[`Message > Message closeAllVue demo works fine 1`] = `
<t-space>
  <t-button
    variant="outline"
  >
    点击打开多个消息
  </t-button>
  <t-button
    id="t-demo-msg-close-all"
    variant="outline"
  >
    点击关闭所有消息
  </t-button>
</t-space>
`;

exports[`Message > Message closeVue demo works fine 1`] = `
<t-space
  data-v-beccb196=""
  direction="vertical"
>
  <t-message
    closebtn="true"
    data-v-beccb196=""
  >
    点击关闭按钮触发事件 close-btn-click 
  </t-message>
  <t-message
    closebtn="关闭"
    data-v-beccb196=""
  >
    自定义关闭按钮（文字）
  </t-message>
  <t-message
    closebtn="function () { [native code] }"
    data-v-beccb196=""
  >
    自定义关闭按钮（函数）
  </t-message>
  <t-message
    data-v-beccb196=""
  >
     自定义关闭按钮（插槽） 
  </t-message>
</t-space>
`;

exports[`Message > Message loadingVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-message
    theme="loading"
  >
    用于表示操作正在生效的过程中
  </t-message>
  <t-message
    theme="loading"
  >
    用于表示操作顺利达成(10s)
  </t-message>
  <t-message
    theme="loading"
  >
    用于表示普通操作失败中断(10s)
  </t-message>
  <t-button
    disabled="true"
  >
    重置
  </t-button>
</t-space>
`;

exports[`Message > Message placementVue demo works fine 1`] = `
<t-space
  data-v-d40079bc=""
  direction="vertical"
  size="large"
>
  <t-space
    data-v-d40079bc=""
  >
    <t-input
      data-v-d40079bc=""
      placeholder="请输入横向偏移量"
    />
    <t-input
      data-v-d40079bc=""
      placeholder="请输入纵向偏移量"
    />
  </t-space>
  <div
    class="tdesign-tooltip-placement"
    data-v-d40079bc=""
  >
    <t-button
      class="placement-center"
      data-v-d40079bc=""
      variant="outline"
    >
      center
    </t-button>
    <t-button
      class="placement-top"
      data-v-d40079bc=""
      variant="outline"
    >
      top
    </t-button>
    <t-button
      class="placement-left"
      data-v-d40079bc=""
      variant="outline"
    >
      left
    </t-button>
    <t-button
      class="placement-right"
      data-v-d40079bc=""
      variant="outline"
    >
      right
    </t-button>
    <t-button
      class="placement-bottom"
      data-v-d40079bc=""
      variant="outline"
    >
      bottom
    </t-button>
    <t-button
      class="placement-top-left"
      data-v-d40079bc=""
      variant="outline"
    >
      top-left
    </t-button>
    <t-button
      class="placement-top-right"
      data-v-d40079bc=""
      variant="outline"
    >
      top-right
    </t-button>
    <t-button
      class="placement-bottom-left"
      data-v-d40079bc=""
      variant="outline"
    >
      bottom-left
    </t-button>
    <t-button
      class="placement-bottom-right"
      data-v-d40079bc=""
      variant="outline"
    >
      bottom-right
    </t-button>
  </div>
</t-space>
`;

exports[`Message > Message pluginVue demo works fine 1`] = `
<t-space
  direction="vertical"
  size="large"
>
  <t-space
    direction="vertical"
  >
    <p>
      插件调用
    </p>
    <t-space>
      <t-button
        theme="primary"
        variant="outline"
      >
        消息
      </t-button>
      <t-button
        theme="success"
        variant="outline"
      >
         成功 
      </t-button>
      <t-button
        theme="warning"
        variant="outline"
      >
         警示 
      </t-button>
      <t-button
        theme="danger"
        variant="outline"
      >
         失败 
      </t-button>
      <t-button
        theme="primary"
        variant="outline"
      >
         询问 
      </t-button>
      <t-button
        theme="primary"
        variant="outline"
      >
         加载中 
      </t-button>
      <t-button
        theme="default"
        variant="outline"
      >
        关闭所有
      </t-button>
      <t-button
        theme="default"
        variant="outline"
      >
         设置默认位置 
      </t-button>
    </t-space>
  </t-space>
  <t-space
    direction="vertical"
  >
    <p>
      函数式调用
    </p>
    <t-space>
      <t-button
        theme="primary"
        variant="outline"
      >
         消息 
      </t-button>
      <t-button
        theme="success"
        variant="outline"
      >
         成功 
      </t-button>
      <t-button
        theme="warning"
        variant="outline"
      >
         警示 
      </t-button>
      <t-button
        theme="danger"
        variant="outline"
      >
        失败
      </t-button>
      <t-button
        theme="primary"
        variant="outline"
      >
         询问 
      </t-button>
      <t-button
        theme="primary"
        variant="outline"
      >
         加载中 
      </t-button>
      <t-button
        theme="default"
        variant="outline"
      >
        关闭所有
      </t-button>
      <t-button
        theme="default"
        variant="outline"
      >
         设置默认位置 
      </t-button>
    </t-space>
  </t-space>
</t-space>
`;

exports[`Message > Message toggleVue demo works fine 1`] = `
<t-space>
  <t-button
    variant="outline"
  >
     自由控制关闭时机（打开） 
  </t-button>
</t-space>
`;

exports[`Message > Message typeVue demo works fine 1`] = `
<div
  class="t-demo-message"
  data-v-c8aa4ce6=""
>
  <t-message
    data-v-c8aa4ce6=""
    theme="info"
  >
    用户表示普通操作信息提示
  </t-message>
  <t-message
    data-v-c8aa4ce6=""
    theme="success"
  >
    用户表示操作顺利达成
  </t-message>
  <t-message
    data-v-c8aa4ce6=""
    theme="warning"
  >
    用户表示操作引起一定后果
  </t-message>
  <t-message
    data-v-c8aa4ce6=""
    theme="error"
  >
    用户表示操作引起严重的后果
  </t-message>
  <t-message
    data-v-c8aa4ce6=""
    theme="question"
  >
    用于帮助用户操作的信息提示
  </t-message>
  <t-message
    data-v-c8aa4ce6=""
    theme="loading"
  >
    用于表示操作正在生效的过程中
  </t-message>
</div>
`;
